<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/bitter_bold"
        android:text="@string/name_input_title"
        android:textColor="@android:color/primary_text_light"
        android:alpha="0.8"
        android:textSize="20sp"
        android:layout_marginTop="75dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input_hint"
        android:layout_marginBottom="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/bitter_bold"
        android:text="@string/second_name_title"
        android:textColor="@android:color/primary_text_light"
        android:alpha="0.8"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_name_hint"
        android:layout_marginBottom="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/bitter_bold"
        android:text="@string/age_input_title"
        android:textColor="@android:color/primary_text_light"
        android:alpha="0.8"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_input_hint"
        android:layout_marginBottom="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sign_up_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_weight="1"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

</LinearLayout>