<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="top"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_level_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_margin="10dp"
        android:text="@string/level1" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_level_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_margin="10dp"
        android:text="@string/level2" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/button_level_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_margin="10dp"
        android:text="@string/level3" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_level_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_margin="10dp"
        android:text="@string/level4" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_level_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_margin="10dp"
        android:text="@string/level5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sign_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/secondary"
            app:srcCompat="@drawable/ic_check_black_24dp"
            android:layout_weight="1"
            android:layout_margin="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sign_up_back_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:backgroundTint="@color/secondary"
            app:srcCompat="@drawable/ic_check_black_24dp" />

    </LinearLayout>
</LinearLayout>