<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="top">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_tennis_ball"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="75dp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/name_input_hint"
        android:textColorHint="@color/hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/password_input_hint"
        android:textColorHint="@color/hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.ActionButton"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="@color/textOnSecondary"
        android:backgroundTint="@color/secondary"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_sign_up"
        android:textColor="@color/textOnPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="75dp" />

</LinearLayout>
